@@ -1,17 +1,20 @@
 package no.fintlabs;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import no.fint.model.resource.FintLinks;
-import no.fint.model.resource.administrasjon.organisasjon.OrganisasjonselementResource;
-import no.fint.model.resource.administrasjon.personal.ArbeidsforholdResource;
-import no.fint.model.resource.administrasjon.personal.PersonalressursResource;
-import no.fint.model.resource.felles.PersonResource;
-import no.fint.model.resource.utdanning.elev.ElevResource;
-import no.fint.model.resource.utdanning.elev.ElevforholdResource;
-import no.fint.model.resource.utdanning.elev.SkoleressursResource;
-import no.fint.model.resource.utdanning.utdanningsprogram.SkoleResource;
-import no.fintlabs.azureUser.AzureUser;
+import no.fintlabs.entraUser.EntraUserPayload;
+import no.novari.fint.model.resource.FintLinks;
+import no.novari.fint.model.resource.administrasjon.organisasjon.OrganisasjonselementResource;
+import no.novari.fint.model.resource.administrasjon.personal.ArbeidsforholdResource;
+import no.novari.fint.model.resource.administrasjon.personal.PersonalressursResource;
+import no.novari.fint.model.resource.felles.PersonResource;
+import no.novari.fint.model.resource.utdanning.elev.ElevResource;
+import no.novari.fint.model.resource.utdanning.elev.ElevforholdResource;
+import no.novari.fint.model.resource.utdanning.elev.SkoleressursResource;
+import no.novari.fint.model.resource.utdanning.utdanningsprogram.SkoleResource;
 import no.fintlabs.cache.FintCache;
+import no.fintlabs.entraUser.EntraUser;
+import no.fintlabs.entraUser.EntraUserService;
 import no.fintlabs.kafka.common.ListenerContainerFactory;
 import no.fintlabs.kafka.entity.EntityConsumerFactoryService;
 import no.fintlabs.kafka.entity.topic.EntityTopicNameParameters;
@@ -24,13 +27,10 @@ import org.springframework.kafka.listener.ConcurrentMessageListenerContainer;
 
 @Configuration
 @Slf4j
+@RequiredArgsConstructor
 public class EntityConsumersConfiguration {
 
     private final EntityConsumerFactoryService entityConsumerFactoryService;
-
-    public EntityConsumersConfiguration(EntityConsumerFactoryService entityConsumerFactoryService) {
-        this.entityConsumerFactoryService = entityConsumerFactoryService;
-    }
 
     private <T extends FintLinks> ConcurrentMessageListenerContainer<String, T> createCacheConsumer(
             String resourceReference,
@@ -92,8 +92,8 @@ public class EntityConsumersConfiguration {
 
     @Bean
     ConcurrentMessageListenerContainer<String, ElevResource> elevResourceEntityConsumer(
-            FintCache<String,ElevResource> elevResourceCache
-    ){
+            FintCache<String, ElevResource> elevResourceCache
+    ) {
         return createCacheConsumer(
                 "utdanning.elev.elev",
                 ElevResource.class,
@@ -104,7 +104,7 @@ public class EntityConsumersConfiguration {
     @Bean
     ConcurrentMessageListenerContainer<String, PersonResource> personResourceUtdanningEntityConsumer(
             FintCache<String, PersonResource> personResourceCache
-    ){
+    ) {
         return createCacheConsumer(
                 "utdanning.elev.person",
                 PersonResource.class,
@@ -115,7 +115,7 @@ public class EntityConsumersConfiguration {
     @Bean
     ConcurrentMessageListenerContainer<String, ElevforholdResource> elevforholdResourceEntityConsumer(
             FintCache<String, ElevforholdResource> elevforholdResourceCache
-    ){
+    ) {
         return createCacheConsumer(
                 "utdanning.elev.elevforhold",
                 ElevforholdResource.class,
@@ -125,8 +125,8 @@ public class EntityConsumersConfiguration {
 
     @Bean
     ConcurrentMessageListenerContainer<String, SkoleResource> skoleResourceEntityConsumer(
-            FintCache<String,SkoleResource> skoleResourceCache
-    ){
+            FintCache<String, SkoleResource> skoleResourceCache
+    ) {
         return createCacheConsumer(
                 "utdanning.utdanningsprogram.skole",
                 SkoleResource.class,
@@ -137,18 +137,18 @@ public class EntityConsumersConfiguration {
     @Bean
     ConcurrentMessageListenerContainer<String, SkoleressursResource> skoleressursResourceEntityConsumer(
             FintCache<String, SkoleressursResource> skoleressursResourceCache,
-            FintCache<String,Long> employeeInSchoolCache
-    ){
-        ListenerContainerFactory<SkoleressursResource,EntityTopicNameParameters,EntityTopicNamePatternParameters> skoleressursConsumerFactory
+            FintCache<String, Long> employeeInSchoolCache
+    ) {
+        ListenerContainerFactory<SkoleressursResource, EntityTopicNameParameters, EntityTopicNamePatternParameters> skoleressursConsumerFactory
                 = entityConsumerFactoryService.createFactory(
-                        SkoleressursResource.class,
+                SkoleressursResource.class,
                 consumerRecord -> {
-                    String personalressursHref = consumerRecord.value().getPersonalressurs().get(0).getHref();
-                    String key = personalressursHref.substring(personalressursHref.lastIndexOf("/") +1);
+                    String personalressursHref = consumerRecord.value().getPersonalressurs().getFirst().getHref();
+                    String key = personalressursHref.substring(personalressursHref.lastIndexOf("/") + 1);
                     skoleressursResourceCache.put(
-                                   key,
-                                   consumerRecord.value()
-                           );
+                            key,
+                            consumerRecord.value()
+                    );
                     Long numberOfUndervisningsforhold = (long) consumerRecord.value().getUndervisningsforhold().size();
                     employeeInSchoolCache.put(
                             key,
@@ -161,48 +161,55 @@ public class EntityConsumersConfiguration {
     }
 
     @Bean
-    ConcurrentMessageListenerContainer<String,AzureUser> azureUserResourceEntityConsumer(
-            FintCache<String, AzureUser> azureUserResourceCache
-    ){
-        ListenerContainerFactory<AzureUser, EntityTopicNameParameters, EntityTopicNamePatternParameters> azureUserConsumerFactory
+    ConcurrentMessageListenerContainer<String, EntraUserPayload> entraUserResourceEntityConsumer(
+            FintCache<String, EntraUser> azureUserResourceCache,
+            EntraUserService entraUserService) {
+        ListenerContainerFactory<EntraUserPayload, EntityTopicNameParameters, EntityTopicNamePatternParameters> entraUserConsumerFactory
                 = entityConsumerFactoryService.createFactory(
-                AzureUser.class,
+                EntraUserPayload.class,
                 consumerRecord -> {
-                    AzureUser azureUser = consumerRecord.value();
-                    log.debug("Trying to save: " + azureUser.getUserPrincipalName());
-                    if (azureUser.isValid()) {
+                    if (consumerRecord.value() == null) {
+                        log.info("Received tombstone for user: {}", consumerRecord.key());
+                        entraUserService.handleTombstoneForId(consumerRecord.key());
+                    } else {
+                        EntraUser entraUser = EntraUser.fromRecord(consumerRecord);
+                        if(entraUser.userPrincipalName().equals("unknown")) {
+                            log.info("Received tombstone for user: {}", consumerRecord.key());
+                            entraUserService.handleTombstoneForId(consumerRecord.key());
+                            return;
+                        }
                         azureUserResourceCache.put(
-                                azureUser.getEmployeeId() != null
-                                        ? azureUser.getEmployeeId()
-                                        : azureUser.getStudentId(),
-                                azureUser
+                                entraUser.getEmployeeOrStudentId(),
+                                entraUser
                         );
-                        log.debug("Saved to cache: " + azureUser.getUserPrincipalName());
-                    }
-                    else {
-                        log.debug("Not saved, missing employeeId or studentId: {} with azureID : {}",
-                                azureUser.getUserPrincipalName(), azureUser.getId());
+                        log.debug("Saved to cache: " + entraUser.userPrincipalName());
                     }
                 }
         );
-        if (azureUserConsumerFactory != null){
-           return azureUserConsumerFactory.createContainer(EntityTopicNameParameters.builder().resource("azureuser").build());
-        }
-        else { return null; }
+        return entraUserConsumerFactory.createContainer(EntityTopicNameParameters.builder().resource("graph-user").build());
 
     }
 
 
     @Bean
-    ConcurrentMessageListenerContainer<String,User> userResourceEntityConsumer(
+    ConcurrentMessageListenerContainer<String, User> userResourceEntityConsumer(
             FintCache<String, User> publishUserCache
-    ){
+    ) {
         return entityConsumerFactoryService.createFactory(
                 User.class,
-                consumerRecord -> publishUserCache.put(
-                        consumerRecord.value().getResourceId(),
-                        consumerRecord.value()
-                )
+                consumerRecord -> {
+                    if (consumerRecord.value() == null) {
+                        if (consumerRecord.key() != null) {
+                            publishUserCache.remove(consumerRecord.key());
+                        }
+                        return;
+                    }
+
+                    publishUserCache.put(
+                            consumerRecord.value().getResourceId(),
+                            consumerRecord.value()
+                    );
+                }
         ).createContainer(EntityTopicNameParameters.builder().resource("user").build());
     }
 
